
  * Fix bug  maj modules Auto/Manu (scripts modules_installes.php and boutons_style.css)
  * Fix bug in script select_briques.php 
  * MisterPhi : 
    * Modify process process statistics
    * Add redirect mail 
    * Add link mail to groups
    * Add strong authentification system based on swekey  
  * Add password user init and group listing in appli Annu
  * Modify rights acces for administration page in barre.php

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 21 May 2010 10:56:26 +0200

lcs-web (2.4.6.5) Lcs; urgency=low

  * Modify barre.php : Correction broken link urllogo
  * Modify Annu/replica.php Add select replica slave when LCS use LDAP SE3 

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 29 Apr 2010 08:58:32 +0200

lcs-web (2.4.6.4) Lcs; urgency=low

  * Cleaning lcs-web-fixrights

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Wed, 07 Apr 2010 13:49:36 +0200

lcs-web (2.4.6.3) Lcs; urgency=low

  * Remove cron task ldap save, this task was move in lcs-security package
  * Fix problem of the missing link in webmail barre.php 

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 18 Mar 2010 10:01:51 +0100

lcs-web (2.4.6.2) Lcs; urgency=low

  [ Jean-Luc Chretien ]
  * Add cron.daily task webalizer.lcs for limited acces to webalizer reports

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Wed, 17 Feb 2010 16:09:43 +0100

lcs-web (2.4.6.1) Lcs; urgency=low

  [ Jean-Luc Chretien ]
  * Correction accents in displogin function

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 22 Jan 2010 13:58:53 +0100

lcs-web (2.4.6) Lcs; urgency=low

  [ Simon Cavey ]
  * LcsMaj : add URLMAJTGZ Black-list

  [ Philippe Leclerc ]
  * add scripts for redirect email
  * filename forward registered hard in scripts
  * add scripts for display log in Administration menu	

  [ Philippe Le Brouster ]
  * Add the scripts to manage the ldap rights (add or delete a right to an user).
