@@ -8,9 +8,10 @@ lcs-web (2.4.7~3) UNRELEASED; urgency=low
     * Add link mail to groups
     * Add strong authentification system based on swekey  
   * Add password user init and group listing in appli Annu
+  * Add a function acces_btn_admin in function_inc.php
   * Modify rights acces for administration page in barre.php
 
- -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 21 May 2010 10:56:26 +0200
+ -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 28 May 2010 22:22:09 +0200
 
 lcs-web (2.4.6.5) Lcs; urgency=low
 
